[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rrct"
version = "1.0.0"
authors = [{name="Rasheed Ibraheem", email="R.O.Ibraheem@sms.ed.ac.uk"},
]
maintainers = [{name="Rasheed Ibraheem", email="R.O.Ibraheem@sms.ed.ac.uk"},
]
description = "Relevance, Redundancy, and Complementarity Trade-off, a robust feature selection algorithm"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Rasheed19/rrct-modification"
"Bug Tracker" = "https://github.com/Rasheed19/rrct-modification/issues"