[metadata]
name = rrct
version = 1.0.5
author = Rasheed Ibraheem
author_email = R.O.Ibraheem@sms.ed.ac.uk
description = Relevance, Redundancy, and Complementarity Trade-off, a robust feature selection algorithm.
license = GNU General Public License v3 (GPLv3)
home_page = https://github.com/Rasheed19/rrct-modification
